<resources>
    <string name="app_name">荣成河湖长制</string>
    <string name="empty"></string>
    <string name="holdtext">占位</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="changepwd">修改密码</string>
    <string name="setnewpwd">设置新密码</string>
    <string name="forgotpwd">忘记密码</string>
    <string name="about">关于系统</string>
    <string name="logout">注销登录</string>
    <string name="mycollect">我的收藏</string>
    <string name="submit">提交</string>
    <string name="save">保存</string>
    <string name="store">暂存</string>
    <string name="qualityexplain">地表水质类别说明</string>
    <string name="photocomplaint">拍照投诉</string>
    <string name="list">列表</string>
    <string name="map">地图</string>
    <string name="searchriver">搜索河道</string>
    <string name="leaderinstruction">领导批示</string>
    <string name="cityChiefInstruction">市级河长批示</string>
    <string name="bossChiefInstruction">镇街总河长批示</string>
    <string name="complaint">投诉</string>
    <string name="suggest">建议</string>
    <string name="isuggest">我要建议</string>
    <string name="icomplaint">我要投诉</string>
    <string name="iProblemReport">我要上报</string>
    <string name="iDucha">我要督察</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="call">拨打</string>
    <string name="tips">提示</string>
    <string name="unlimeited">不限</string>
    <string name="select_area">请选择区域</string>
    <string name="bottom_xinwen">新闻动态</string>
    <string name="bottom_duanmian">断面水质</string>
    <string name="bottom_gongshi">投诉建议</string>
    <string name="bottom_shoye">首页</string>
    <string name="bottom_hedao">河湖信息</string>
    <string name="bottom_paihang">排行榜</string>
    <string name="bottom_mycenter">个人中心</string>
    <string name="hint_phonenum">输入手机号码</string>
    <string name="hint_password">输入登录密码</string>
    <string name="hint_curpassword">输入当前密码</string>
    <string name="hint_newpassword">输入新密码</string>
    <string name="hint_newrepassword">再次输入新密码</string>
    <string name="hint_authcode">输入验证码</string>
    <string name="hint_username">输入账号(手机号)</string>
    <string name="hint_suggest_name">建议人姓名</string>
    <string name="hint_com_name">投诉人姓名</string>
    <string name="hint_pro_report_name">上报人姓名</string>
    <string name="hint_ducha_name">督察员姓名</string>
    <string name="hint_suggest_tel">联系电话</string>
    <string name="hint_suggest_subject">建议主题</string>
    <string name="hint_com_subject">投诉主题</string>
    <string name="hint_pro_report_subject">上报主题</string>
    <string name="hint_ducha_subject">督察主题</string>
    <string name="hint_suggest_content">内容描述(不超过140字)</string>
    <string name="hint_evaluate_remark">请输入留言</string>
    <string name="hint_replayinfo">请输入处理结果</string>
    <string name="hint_searchriver">输入河道名称进行查询</string>
    <string name="form_reg_ireaded">我已经阅读并同意</string>
    <string name="form_reg_agreement">《用户注册协议》</string>
    <string name="form_login_forgot">忘记密码?</string>
    <string name="form_suggest_river">建议河道</string>
    <string name="form_complaint_river">投诉河道</string>
    <string name="form_complaint_lake">投诉湖泊</string>
    <string name="form_suggest_lake">建议湖泊</string>
    <string name="form_problem_report_river">上报河道</string>
    <string name="form_ducha_river">督察河道</string>
    <string name="form_suggest_anonymity">匿名建议</string>
    <string name="form_complaint_anonymity">匿名投诉</string>
    <string name="suggestioninfo">建议情况</string>
    <string name="sug_name">建议人姓名</string>
    <string name="sug_phone">手机号码  </string>
    <string name="sug_river">建议河道</string>
    <string name="sug_content">建议内容</string>
    <string name="complaininfo">投诉情况</string>
    <string name="complain_map">查看投诉方位>></string>
    <string name="com_name">投诉人姓名</string>
    <string name="com_phone">手机号码  </string>
    <string name="com_river">投诉河道  </string>
    <string name="com_content">投诉内容</string>
    <string name="com_theme">投诉标题</string>
    <string name="handleinfo">处理情况</string>
    <string name="handleduban">督办单详情</string>
    <string name="handleinfo_2">第二次处理情况</string>
    <string name="instruction">批示情况</string>
    <string name="firstCheck">查验情况</string>
    <string name="secondCheck">第二次查验情况</string>
    <string name="partySecretaryIntruction">市委书记批示</string>
    <string name="mayorIntruction">市长批示</string>
    <string name="otherMayorIntruction">分管市长批示</string>
    <string name="cityChiefIntruction">市级河长批示</string>
    <string name="bossChiefIntruction">镇街总河长批示</string>
    <string name="replyIntruction">批示回复详情</string>
    <string name="replayinfo">回复详情</string>
    <string name="handler">处理人</string>
    <string name="dubanTheam">督办主题</string>
    <string name="dubanContent">督办内容</string>
    <string name="eg_dubanTheam">主题示例</string>
    <string name="evallevel">投诉人评分</string>
    <string name="evalremark">投诉人留言</string>
    <string name="handletime">答复时间</string>
    <string name="handleResult">处理结果</string>
    <string name="instructionResult">批示结果</string>
    <string name="handleResultPerson">处理人</string>
    <string name="instructionPerson">批示领导</string>
    <string name="checkresult">查验结果</string>
    <string name="intructionContent">批示结果</string>
    <string name="replyIntructionContent">回复内容</string>
    <string name="replyIntructionChief">河长姓名</string>
    <string name="deadline">处理期限</string>
    <string name="handlestatus">处理状态:</string>
    <string name="evaluateinfo">评价情况</string>
    <string name="sug_evaluate">请对河长处理结果进行评价:</string>
    <string name="sug_addremark">补充说明:</string>
    <string name="evaluate_val1">非常满意</string>
    <string name="evaluate_val2">比较满意</string>
    <string name="evaluate_val3">一般</string>
    <string name="evaluate_val4">不满意</string>
    <string name="evaluate_tips">您的评价意见很重要，将纳入河道日常工作考核，请根据实际情况进行客观评价。</string>
    <string name="section_info">断面水质信息</string>
    <string name="section_name">断面名称</string>
    <string name="outlet">阳光排放口信息</string>
    <string name="lake_info">湖泊信息</string>
    <string name="smallwater_info">小微水体信息</string>
    <string name="rive_name">河道名称</string>
    <string name="section_level">等级</string>
    <string name="section_quality">水质类别</string>
    <string name="river_info">河道信息</string>
    <string name="river_selriver">请选择区域</string>
    <string name="river_start">河道起点</string>
    <string name="river_end">河道终点</string>
    <string name="river_level">河道等级</string>
    <string name="river_owner">所属镇街</string>
    <string name="river_flowThrough">流经镇街</string>
    <string name="river_length">河道长度</string>
    <string name="river_responsibility">河长职责</string>
    <string name="riverchief_responsibility">河长职务</string>
    <string name="river_target">整治目标</string>
    <string name="river_contactinfo">河长联系方式</string>
    <string name="period_7days">7天</string>
    <string name="period_1month">30天</string>
    <string name="cityriverchief_responsibility">职务</string>
    <string name="river_district_title">市级河长</string>
    <string name="river_city_title">市级河长</string>
    <string name="river_supervisePhone">统一监督电话</string>
    <string name="river_supervisePhoneNull">暂无电话信息</string>
    <string name="river_npc">人大监督员</string>
    <string name="river_npc_name">代表姓名</string>
    <string name="river_npc_title">代表级别</string>
    <string name="river_quhezhang">河长姓名</string>
    <string name="river_fdhezhang">分段河长</string>
    <string name="river_quhezhang_cont">市级联系人</string>
    <string name="river_zhenhezhang">镇街河长</string>
    <string name="river_contdep">联系部门</string>
    <string name="river_contpe">联系人</string>
    <string name="river_jingzhang">河道警长</string>
    <string name="river_villagechief">下属村级河长</string>
    <string name="river_villagechief_title">村级河长</string>
    <string name="river_cleaner_title">河管员</string>
    <string name="river_coordinator_title">协管员</string>
    <string name="river_villagechief_position">职务</string>
    <string name="mycenter">个人中心</string>
    <string name="mychiefcomplaint">处理投诉</string>
    <string name="mychiefmail">我的信箱</string>
    <string name="mychiefsign">河长签到</string>
    <string name="mychiefsuggestion">处理建议</string>
    <string name="mychiefinspect">开始巡河</string>
    <string name="mychiefrecord">巡河记录</string>
    <string name="myLakeChiefRecord">巡湖记录</string>
    <string name="mychiefrivermanage">管辖河道</string>
    <string name="mychiefduban">查看督办-提示单</string>
    <string name="myduban">我的督办单</string>
    <string name="dubandan">督办单列表</string>
    <string name="intruction">领导批示</string>
    <string name="note_to_leader">通知单抄送</string>
    <string name="dubanTochief">查看河道督办单</string>
    <string name="dubanTocitychief">查看河道督办单</string>
    <string name="mycomplaint">我的投诉</string>
    <string name="mysuggestion">我的建议</string>
    <string name="myProRep">我的上报</string>
    <string name="myDuCha">我的督察</string>
    <string name="mycollection">我的收藏</string>
    <string name="mysetting">我的设置</string>
    <string name="mychangepwd">修改密码</string>
    <string name="complaintorder">投诉处理单</string>
    <string name="problem_report">问题上报单</string>
    <string name="ducha">督察单</string>
    <string name="news_news">新闻动态</string>
    <string name="news_notice">通知公告</string>
    <string name="news_detail">详情</string>
    <string name="quality_info1">主要适用于源头水、国家自然保护区；</string>
    <string name="quality_info2">主要适用于集中式生活饮用水地表水源地一级保护区、珍稀水生生物栖息地、鱼虾类产场、仔稚幼鱼的索饵场等；</string>
    <string name="quality_info3">主要适用于集中式生活饮用水地表水源地二级保护区、鱼虾类越冬场、洄游通道、水产养殖区等渔业水域及游泳区；</string>
    <string name="quality_info4">主要适用于一般工业用水区及人体非直接接触的娱乐用水区；</string>
    <string name="quality_info5">主要适用于农业用水区及一般景观要求水域；</string>
    <string name="quality_info6">污染程度已超过V类的水。</string>
    <string name="quality_infotip">对应地表水上述六类水域功能，将地表水环境质量标准基本项目标准值分为六类，不同功能类别分别执行相应类别的标准值。水域功能类别高的标准值严于水域功能类别低的标准值。同一水域兼有多类使用功能的，执行最高功能类别对应的标准值。实现水域功能与达功能类别标准为同一含义。\n注：水质分类方案依据国家地表水环境质量标准(GB 3838&#8211;2002）</string>
    <string name="quality_1">I</string>
    <string name="quality_2">II</string>
    <string name="quality_3">III</string>
    <string name="quality_4">IV</string>
    <string name="quality_5">V</string>
    <string name="quality_6">劣V</string>
    <string name="param_ph">pH</string>
    <string name="param_ph_ch">氢离子</string>
    <string name="param_kmno4">KMnO4</string>
    <string name="param_do">DO</string>
    <string name="param_ntu">NTU</string>
    <string name="param_cod">COD</string>
    <string name="param_util_explain">指数单位: mg/L</string>
    <string name="section_main">主要断面</string>
    <string name="section_important">重要支流</string>
    <string name="section_drinking">饮用水源地</string>
    <string name="section_admin">行政断面</string>
    <string name="section_sectioninf">断面信息</string>
    <string name="river_code">河道编号</string>
    <string name="no_searched_river">没有找到相关河道!</string>
    <string name="river_select_segment">请选择河段</string>
    <string name="river_dzgsp">基本信息</string>
    <string name="river_yhyc">一河一策</string>
    <string name="river_tsxx">投诉信息</string>
    <string name="river_xxgk">信息公开</string>
    <string name="river_hdsz">河道水质</string>
    <string name="river_hdfw">河道方位</string>
    <string name="follow">+收藏</string>
    <string name="unfollow">已收藏</string>
    <string name="ranking">排行榜</string>
    <string name="river_area">河道区域</string>
    <string name="complaint_count">投诉量</string>
    <string name="satisfaction_count">满意度</string>
    <string name="unhandle">未处理</string>
    <string name="thismonth">本月</string>
    <string name="number">编号</string>
    <string name="eg_number">TS023423434</string>
    <string name="eg_sug_content">**河上游有臭水排放</string>
    <string name="eg_handleresult">找到违章排放企业，并已督促其停止排放，现已解决。</string>
    <string name="eg_river_name">暂无</string>
    <string name="eg_int_1">1</string>
    <string name="eg_int_5">5</string>
    <string name="eg_int_pe20">20%</string>
    <string name="sernum">编号</string>
    <string name="vieworder">查看处理单</string>
    <string name="evaluatenow">马上评价</string>
</resources>