<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_gray" >

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_medium"
        android:paddingLeft="@dimen/page_padding"
        android:paddingRight="@dimen/page_padding"
        android:paddingTop="@dimen/padding_medium" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/eg_river_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sernum"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:id="@+id/tv_sernum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eg_number"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue"
            android:textSize="@dimen/font_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ll_title"
        android:layout_marginTop="@dimen/linew"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_large"
        android:paddingLeft="@dimen/page_padding"
        android:paddingRight="@dimen/page_padding"
        android:paddingTop="@dimen/padding_large" >

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/eg_sug_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/font_small" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_vieworder"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/shape_gray_board_btn_bg"
                android:gravity="center"
                android:paddingLeft="@dimen/padding_medium"
                android:paddingRight="@dimen/padding_medium"
                android:text="@string/vieworder"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_gray_green"
                android:textSize="@dimen/font_small" />

            <Button
                android:id="@+id/btn_evaluatenow"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/padding_small"
                android:background="@drawable/btn_green_white"
                android:gravity="center"
                android:text="@string/evaluatenow"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="@dimen/font_small" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>