<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_gray"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_evalinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_large"
        android:background="@drawable/wave_both"
        android:orientation="vertical"
        android:padding="@dimen/page_padding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evaluateinfo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_singleline_margin_v" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_medium"
                android:paddingTop="@dimen/padding_medium" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="140dp"
                    android:text="@string/evallevel"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_gray" />

                <TextView
                    android:id="@+id/tv_eval_evallevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:tag="tt:{.m:getEvelLevels}"
                    android:text="@string/evaluate_val1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_gray" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/lineheight"
                android:background="@drawable/shape_gray_dashline" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_medium"
                android:paddingTop="@dimen/padding_medium" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/evalremark"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_gray" />

                <TextView
                    android:id="@+id/tv_eval_evalremark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:tag="tt:{.evalContent}"
                    android:text="@string/eg_handleresult"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_gray" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>