<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="@dimen/head_h"
        layout="@layout/inc_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/page_padding" >

        <LinearLayout
            style="@style/form_singleline"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/form_singleline_h"
            android:layout_marginBottom="@dimen/form_singleline_margin_v"
            android:layout_marginTop="@dimen/form_singleline_margin_v"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="@dimen/form_singleline_img_w"
                android:layout_height="@dimen/form_singleline_img_h"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/im_user" />

            <AutoCompleteTextView
                android:id="@+id/Atv_username"
                style="@style/form_singleline_te"
                android:completionThreshold="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/form_singleline_padding"
                android:layout_weight="1"
                android:hint="@string/hint_username" />
        </LinearLayout>

        <LinearLayout
            style="@style/form_singleline"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/form_singleline_h"
            android:layout_marginBottom="@dimen/form_singleline_margin_v"
            android:layout_marginTop="@dimen/form_singleline_margin_v"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="@dimen/form_singleline_img_w"
                android:layout_height="@dimen/form_singleline_img_h"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/im_lock" />

            <EditText
                android:id="@+id/et_password"
                style="@style/form_singleline_te"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/form_singleline_padding"
                android:layout_weight="1"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/form_singleline_margin_v"
            android:clickable="true"
            android:gravity="right"
            android:text="@string/form_login_forgot"
            android:textColor="@color/btn_green_white" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_button_h"
            android:layout_marginTop="@dimen/form_singleline_margin_v"
            android:background="@drawable/form_btn1_bg"
            android:text="@string/login"
            android:textColor="@color/btn_white_green" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_button_h"
            android:layout_marginTop="@dimen/form_button_margintop"
            android:background="@drawable/form_btn2_bg"
            android:text="@string/register"
            android:textColor="@color/btn_green_white" />
    </LinearLayout>

</LinearLayout>